css/style.css
@charset "UTF-8";
body {
  margin: 0 auto;
  max-width: 1200px;
  overflow-x: hidden; }

.container {
  font-family: "Montserrat", sans-serif;
  width: 65vw;
  margin: 0 auto;
  font-weight: 300; }

sup {
  vertical-align: super;
  font-size: smaller; }

.header {
  display: flex;
  margin: 40px auto;
  width: 90%; }

.logo-box {
  width: 25vh;
  margin-left: 40px; }
  .logo-box__img {
    display: block;
    max-width: 100%; }

.heading {
  margin-left: auto;
  margin-top: 20px;
  font-size: 32px;
  letter-spacing: 1.1px; }

.step-line {
  margin: 25px auto 0;
  width: 100%;
  height: 3px;
  background-color: #ccc;
  display: flex;
  justify-content: space-between; }
  .step-line__dot {
    width: 15px;
    height: 15px;
    background-color: #ccc;
    border-radius: 50%;
    transform: translateY(-40%);
    position: relative; }
    .step-line__dot--active {
      background-color: transparent;
      animation: 0.6s ease-in forwards animate-color; }
      .step-line__dot--active:not(:first-of-type)::before {
        content: "";
        height: 4px;
        position: absolute;
        top: 53%;
        left: -25px;
        transform: translateY(-50%);
        background-color: #097aff;
        z-index: -1;
        width: 0;
        animation: 0.5s ease-in forwards animate-width; }
    .step-line__dot--done {
      background: url("../img/fajka.png");
      background-color: #097aff;
      background-size: 50%;
      background-position: center center;
      background-repeat: no-repeat;
      color: white; }
    .step-line__dot--answer {
      transform: none;
      height: 20px;
      width: 20px;
      background-color: #ccc;
      color: white; }
    .step-line__dot i {
      font-size: 14px;
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%); }

.answer-text {
  font-size: 16px;
  line-height: 20px;
  margin-left: 15px; }

.form-view {
  border-radius: 5px;
  padding-bottom: 30px;
  margin: 50px auto 0;
  position: relative;
  background: rgba(255, 255, 255, 0.85);
  display: none;
  box-shadow: 0 0 10px #b9b9b9;
  min-height: 500px; }
  .form-view__title {
    font-size: 24px;
    margin-bottom: 20px;
    padding-top: 20px;
    text-align: center;
    margin: 0 auto 30px;
    width: 80%; }
    .form-view__title--final {
      color: white; }
  .form-view__question {
    font-size: 22px;
    margin-top: 20px;
    text-align: center;
    display: flex;
    flex-direction: column;
    height: inherit;
    min-height: 400px; }
    .form-view__question--final {
      height: 75%;
      justify-content: flex-start;
      background-color: #097aff;
      clip-path: polygon(0 0, 100% 0, 100% 85%, 0% 100%); }
  .form-view__input {
    width: 50%;
    margin-left: 30px;
    margin-top: 30px;
    position: relative;
    display: flex; }
    .form-view__input--text {
      margin: 40px auto; }
      .form-view__input--text::after {
        content: "Wpisz imię";
        position: absolute;
        top: -15px;
        left: 30px;
        text-align: center;
        height: 5px;
        width: 20%;
        font-size: 12px;
        padding: 10px;
        color: #097aff;
        background-color: white;
        font-weight: bold; }
    .form-view__input--gender {
      justify-content: space-between;
      margin: 0 auto; }
  .form-view__gender {
    width: 35%;
    padding: 15px;
    cursor: pointer;
    position: relative; }
    .form-view__gender--active {
      border-color: #097aff; }
    .form-view__gender img {
      max-width: 100%;
      display: block; }
  .form-view__text {
    text-align: center;
    margin: 15px 0 10px;
    font-weight: bold;
    line-height: 25px; }
  .form-view__image {
    width: 50%;
    position: absolute;
    z-index: -1; }
    .form-view__image--right {
      right: -30%;
      top: 50%;
      transform: translateY(-50%) translateX(150%); }
      .form-view__image--right > img {
        animation: 1s ease-in 0.2s forwards animate-from-right; }
    .form-view__image--left {
      left: -30%;
      top: 50%;
      transform: translateY(-50%) translateX(-150%); }
      .form-view__image--left > img {
        animation: 1s ease-in 0.2s forwards animate-from-left; }
    .form-view__image-img {
      z-index: -1;
      display: block;
      max-width: 85%; }
  .form-view__answers {
    display: flex;
    width: 50%;
    margin: 0 auto;
    justify-content: space-between;
    align-items: center; }
    .form-view__answers--multiple {
      flex-direction: column;
      width: 80%;
      height: 250px; }
      .form-view__answers--multiple > .form-view__answer {
        justify-content: flex-start;
        align-items: center; }
    .form-view__answers--card {
      width: 95%; }
  .form-view__answer {
    width: 40%;
    padding: 10px;
    cursor: pointer;
    border-radius: 3px;
    display: flex;
    justify-content: center;
    position: relative; }
  .form-view__circle {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    border: 2px solid #ccc;
    position: relative; }
  .form-view__active-circle {
    width: 15px;
    height: 15px;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: all 0.2s ease-in; }
  .form-view__greetings-box {
    margin-left: 50px;
    margin-top: 30px;
    padding: 10px;
    width: 40%;
    background-color: #0862c9;
    border-radius: 20px;
    display: flex;
    justify-content: center; }
  .form-view__greetings-text {
    color: white;
    font-size: 12px;
    padding: 0 15px; }
  .form-view__greetings-icon-box {
    height: 25px;
    width: 80px;
    border-radius: 30px;
    background-color: #0AD488; }
  .form-view__greetings-icon {
    background: url("../img/smile.png");
    background-size: 45%;
    background-repeat: no-repeat;
    height: 25px;
    background-position: center center; }
  .form-view__summary {
    margin-top: 20px;
    width: 60%; }
/* ... */

